# webchugl

./: .gitattributes  .gitignore  LICENSE  README.md  jsdoc.json  package-lock.json  package.json  serve-dev.js  setup.ps1  setup.sh  tsconfig.esm-declarations.json  tsconfig.json  tsdoc.json  typedoc.json
chugins/: ExpEnv.chug.wasm  KasFilter.chug.wasm  Mesh2D.chug.wasm  Overdrive.chug.wasm  PitchTrack.chug.wasm  Sigmund.chug.wasm  Wavetable.chug.wasm
docs-template/: generate.cjs  page.html
docs-template/static/: style.css
docs/plans/: 2026-02-12-dev-server-design.md
examples/camera-cv/: setup.js
examples/chugins/: ABSaturator.chug.wasm  Bitcrusher.chug.wasm  Elliptic.chug.wasm  FIR.chug.wasm  Multicomb.chug.wasm  PanN.chug.wasm  XML.chug.wasm
examples/data-sonification/: index.html  index.js  setup.js
examples/date-the-dobots/: index.html  index.js
examples/drag-drop/: index.html  index.js  main.ck  setup.js
examples/drum-machine/: index.html  index.js  setup.js
examples/gamepad/: index.html  index.js
examples/html-ui/: index.html  index.js  setup.js
examples/mediapipe/: index.html  index.js
examples/midi/: index.html  index.js  main.ck
examples/plugins/: index.html  index.js
examples/recorder/: index.html  index.js  setup.js
examples/speech/: index.html  index.js  main.ck  setup.js
examples/web-data/: index.html  index.js  main.ck  setup.js
examples/webchugl/: index.js  webchugl-esm.js  webchugl.js
jsdoc-template/: publish.js
jsdoc-template/static/: style.css
patches/: chuck.patch  chugl.patch  emscripten-glfw.patch
src/: CMakeLists.txt  build.ps1  build.sh  imgui.ini  program.ck  serve.py  shell.html  webchugl_main.cpp
src/code/: main.ck
src/code/lib/g2d/: g2d.ck
src/host/: audio_ring_buffer.h  webchugl_main.cpp
src/host-web/: AUDIO_WORKLET_PLAN.md  CMakeLists.txt  CMakeLists_audio.cmake  build.ps1  chuck_processor.js  chuck_worker.js  chugl_commands.js  chugl_sync.js  program.ck  serve.py  test_audio.html  test_audio_graphics.html  test_audio_worker.html  test_audio_worklet.html  test_chugl_sync.html  test_chugl_worklet.html  test_full_chugl.html  webchugl.js  webchugl_audio.cpp  webchugl_chugl_audio.cpp  webchugl_command_receiver.cpp  webchugl_gfx.cpp  webchugl_main.cpp  webchugl_stubs.cpp
src/scripts/: build-and-bundle.ps1  build-and-bundle.sh  build.ps1  build.sh  build_web_chugins.ps1  build_web_chugins.sh  bundle.ps1  bundle.sh  dev.ps1  dev.sh  dev_server.py  fetch_packages.py  minify_js.py  package.py  serve.py
src/scripts/py/: create_bundle.py  dev_server.py  fetch_packages.py
src/web/: audio-worklet-processor.js  chugl-audio-processor.js  coi-serviceworker.js  manifest.json  shell.html  sw.js  webchugl-esm.js  webchugl-esm.ts  webchugl.js  webchugl.ts
src/web/lib/: audio-utils.ts  audio-worklet-processor.js  sensors.ts  service-worker.ts  storage.ts  vfs.ts
src/web/types/: chuck.d.ts  emscripten.d.ts  jszip.d.ts
web/: base.css  index.html  style.css  sw.js
web/changelog/: index.html  style.css
web/chugins/: AmbPan.chug.wasm  FoldbackSaturator.chug.wasm  GVerb.chug.wasm  MIAP.chug.wasm  MagicSine.chug.wasm  NHHall.chug.wasm  PowerADSR.chug.wasm  Range.chug.wasm  RegEx.chug.wasm  WinFuncEnv.chug.wasm
web/examples/: example-nav.js
web/examples/chugins/: Binaural.chug.wasm  ConvRev.chug.wasm  ExpDelay.chug.wasm  Line.chug.wasm  Patch.chug.wasm  Perlin.chug.wasm  Random.chug.wasm  Spectacle.chug.wasm  WPDiodeLadder.chug.wasm  WPKorg35.chug.wasm
web/examples/data-sonification/: index.html  index.js  main.ck
web/examples/drag-drop/: index.html  index.js
web/examples/drum-machine/: index.html  index.js  main.ck
web/examples/gamepad/: index.html  index.js  main.ck
web/examples/html-ui/: index.html  index.js  main.ck
web/examples/mediapipe/: index.html  index.js  main.ck
web/examples/midi/: index.html  index.js
web/examples/multi-window/: cubes.ck  index.html  index.js  sphere.ck
web/examples/plugins/: index.html  index.js
web/examples/rapier/: index.html  index.js  main.ck
web/examples/recorder/: index.html  index.js  main.ck
web/examples/speech/: index.html  index.js
web/examples/web-data/: index.html  index.js
